--- a/CSharp.oDesk.Console Example/app.config
+++ b/CSharp.oDesk.Console Example/app.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="CSharp.oDesk.Console_Example.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -8,4 +13,20 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <CSharp.oDesk.Console_Example.Properties.Settings>
+      <setting name="ODeskApiKey" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ODeskApiSecret" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ODeskAccessTokenValue" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ODeskAccessTokenSecret" serializeAs="String">
+        <value />
+      </setting>
+    </CSharp.oDesk.Console_Example.Properties.Settings>
+  </userSettings>
 </configuration>
