--- a/CSharp.oDesk.Console Example/Properties/Settings.settings
+++ b/CSharp.oDesk.Console Example/Properties/Settings.settings
@@ -1,17 +1,24 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="CSharp.oDesk.Console_Example.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="CSharp.oDesk.JobsSearch.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="ODeskApiKey" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="ODeskApiSecret" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
     <Setting Name="ODeskAccessTokenValue" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="ODeskAccessTokenSecret" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="ConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=.;Initial Catalog=ODeskJobsSearch;Integrated Security=True;Connection Timeout=60;Min Pool Size=2;Max Pool Size=20;&lt;/ConnectionString&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=.;Initial Catalog=ODeskJobsSearch;Integrated Security=True;Connection Timeout=60;Min Pool Size=2;Max Pool Size=20;</Value>
+    </Setting>
+    <Setting Name="ODeskApiKey" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="ODeskApiSecret" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
