--- a/CSharp.oDesk.Console Example/app.config
+++ b/CSharp.oDesk.Console Example/app.config
@@ -1,32 +1,37 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="CSharp.oDesk.Console_Example.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="CSharp.oDesk.JobsSearch.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      <section name="CSharp.oDesk.Console_Example.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
   </configSections>
+  <connectionStrings>
+    <add name="CSharp.oDesk.JobsSearch.Properties.Settings.ConnectionString"
+      connectionString="Data Source=.;Initial Catalog=ODeskJobsSearch;Integrated Security=True;Connection Timeout=60;Min Pool Size=2;Max Pool Size=20;" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Common.Logging" publicKeyToken="af08829b84f0328e" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.1.1.0" newVersion="2.1.1.0" />
+        <assemblyIdentity name="Common.Logging" publicKeyToken="af08829b84f0328e" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-2.1.1.0" newVersion="2.1.1.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <userSettings>
-    <CSharp.oDesk.Console_Example.Properties.Settings>
-      <setting name="ODeskApiKey" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="ODeskApiSecret" serializeAs="String">
-        <value />
-      </setting>
+    <CSharp.oDesk.JobsSearch.Properties.Settings>
       <setting name="ODeskAccessTokenValue" serializeAs="String">
         <value />
       </setting>
       <setting name="ODeskAccessTokenSecret" serializeAs="String">
         <value />
       </setting>
-    </CSharp.oDesk.Console_Example.Properties.Settings>
+      <setting name="ODeskApiKey" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ODeskApiSecret" serializeAs="String">
+        <value />
+      </setting>
+    </CSharp.oDesk.JobsSearch.Properties.Settings>
   </userSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup></configuration>
