Jobs Search by Skills

--- a/CSharp.oDesk.Console Example/CSharp.oDesk.JobsSearch.csproj
+++ b/CSharp.oDesk.Console Example/CSharp.oDesk.JobsSearch.csproj
@@ -69,7 +69,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="SearchDetail.cs" />
+    <Compile Include="Skill.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CSharp.oDesk\CSharp.oDesk.csproj">
