--- a/CSharp.oDesk.Console Example/app.config
+++ b/CSharp.oDesk.Console Example/app.config
@@ -2,13 +2,12 @@
 <configuration>
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="CSharp.oDesk.JobsSearch.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      <section name="CSharp.oDesk.JobsSearch.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
       <section name="CSharp.oDesk.Console_Example.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="CSharp.oDesk.JobsSearch.Properties.Settings.ConnectionString"
-      connectionString="Data Source=.;Initial Catalog=ODeskJobsSearch;Integrated Security=True;Connection Timeout=60;Min Pool Size=2;Max Pool Size=20;" />
+      <add name="CSharp.oDesk.JobsSearch.Properties.Settings.ConnectionString" connectionString="Data Source=.;Initial Catalog=ODeskJobsSearch;Integrated Security=True;Connection Timeout=60;Min Pool Size=2;Max Pool Size=20;"/>
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -20,18 +19,18 @@
   </runtime>
   <userSettings>
     <CSharp.oDesk.JobsSearch.Properties.Settings>
-      <setting name="ODeskAccessTokenValue" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="ODeskAccessTokenSecret" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="ODeskApiKey" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="ODeskApiSecret" serializeAs="String">
-        <value />
-      </setting>
+        <setting name="ODeskAccessTokenValue" serializeAs="String">
+            <value/>
+        </setting>
+        <setting name="ODeskAccessTokenSecret" serializeAs="String">
+            <value/>
+        </setting>
+        <setting name="ODeskApiKey" serializeAs="String">
+            <value>ce3f52a735c62bf096631061e6e5d640</value>
+        </setting>
+        <setting name="ODeskApiSecret" serializeAs="String">
+            <value>8cc17d48c8414d1c</value>
+        </setting>
     </CSharp.oDesk.JobsSearch.Properties.Settings>
   </userSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
