--- a/CSharp.oDesk.Console Example/CSharp.oDesk.JobsSearch.csproj
+++ b/CSharp.oDesk.Console Example/CSharp.oDesk.JobsSearch.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>CSharp.oDesk.JobsSearch</RootNamespace>
     <AssemblyName>CSharp.oDesk.JobsSearch</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -60,6 +61,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
