--- a/CSharp.oDesk.Analyze/CSharp.oDesk.Analyze.csproj
+++ b/CSharp.oDesk.Analyze/CSharp.oDesk.Analyze.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{A59AAED3-BD15-4042-A9A4-7046C571CFE6}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CSharp.oDesk.JobsSearch</RootNamespace>
-    <AssemblyName>CSharp.oDesk.JobsSearch</AssemblyName>
+    <RootNamespace>CSharp.oDesk.Analyze</RootNamespace>
+    <AssemblyName>CSharp.oDesk.Analyze</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -81,7 +81,11 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="Skill.cs" />
+    <Compile Include="Properties\Settings1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CSharp.oDesk\CSharp.oDesk.csproj">
