--- a/CSharp.oDesk.Analyze/app.config
+++ b/CSharp.oDesk.Analyze/app.config
@@ -26,10 +26,10 @@
             <value/>
         </setting>
         <setting name="ODeskApiKey" serializeAs="String">
-            <value>ce3f52a735c62bf096631061e6e5d640</value>
+            <value></value>
         </setting>
         <setting name="ODeskApiSecret" serializeAs="String">
-            <value>8cc17d48c8414d1c</value>
+            <value></value>
         </setting>
     </CSharp.oDesk.JobsSearch.Properties.Settings>
   </userSettings>
