--- a/CSharp.oDesk.Analyze/app.config
+++ b/CSharp.oDesk.Analyze/app.config
@@ -2,12 +2,16 @@
 <configuration>
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="CSharp.oDesk.Analyze.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
       <section name="CSharp.oDesk.JobsSearch.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
       <section name="CSharp.oDesk.Console_Example.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
   </configSections>
   <connectionStrings>
-      <add name="CSharp.oDesk.JobsSearch.Properties.Settings.ConnectionString" connectionString="Data Source=.;Initial Catalog=ODeskJobsSearch;Integrated Security=True;Connection Timeout=60;Min Pool Size=2;Max Pool Size=20;"/>
+    <add name="CSharp.oDesk.JobsSearch.Properties.Settings.ConnectionString"
+      connectionString="Data Source=.;Initial Catalog=ODeskJobsSearch;Integrated Security=True;Connection Timeout=60;Min Pool Size=2;Max Pool Size=20;" />
+    <add name="CSharp.oDesk.Analyze.Properties.Settings.ConnectionString"
+      connectionString="Data Source=.;Initial Catalog=ODeskJobsSearch;Integrated Security=True;Connection Timeout=60;Min Pool Size=2;Max Pool Size=20;" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -18,6 +22,20 @@
     </assemblyBinding>
   </runtime>
   <userSettings>
+    <CSharp.oDesk.Analyze.Properties.Settings>
+      <setting name="ODeskAccessTokenValue" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ODeskAccessTokenSecret" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ODeskApiKey" serializeAs="String">
+        <value>ce3f52a735c62bf096631061e6e5d640</value>
+      </setting>
+      <setting name="ODeskApiSecret" serializeAs="String">
+        <value>8cc17d48c8414d1c</value>
+      </setting>
+    </CSharp.oDesk.Analyze.Properties.Settings>
     <CSharp.oDesk.JobsSearch.Properties.Settings>
         <setting name="ODeskAccessTokenValue" serializeAs="String">
             <value/>
