--- a/CSharp.oDesk.Analyze/CSharp.oDesk.Analyze.csproj
+++ b/CSharp.oDesk.Analyze/CSharp.oDesk.Analyze.csproj
@@ -42,6 +42,9 @@
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Release\</OutputPath>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>CSharp.oDesk.Analyze.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Common.Logging, Version=2.1.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
